# HolyBiblePCA

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: HolyBible.ipynb
public/: index.html
